# bingocode-ide

./: .bin_run.py  .gitignore  .temp_camera_test.py  .temp_map_test.py  AGENTS.md  ENGINE_TUTORIAL.md  MEMORY.md  README.md  bulid.py  debug_detailed.py  debug_run.py  env.d.ts  index.html  main.py  map_2.bgs  numtest.bgs  package.json  pnpm-lock.yaml  render_manager_7c51abb.py  requirements.txt  run_with_debug.py  setup.sh  sync-memory.sh  tempCodeRunnerFile.py  test_anchor_movement.py  test_anchor_size.py  test_autosave.py  test_binary_storage.py  test_camera_follow.py  test_camera_view.py  test_collision_anchor.py  test_collision_data.py  test_collision_detector.py  test_collision_edit_fix.py  test_collision_editor.py  test_collision_fix.py  test_collision_reset.py  test_collision_save.py  test_collision_save_load.py  test_collision_scale_issue.py  (+63 more)
assets/: resources.qrc  resources_rc.py
docs/: build.ts  while_true_migration.md
engine/: bingo_engine.py  code_transform.py  requirements.txt  script_runner.py  setup.sh
models/: map_model.py  sprite_model.py
modules/: app_controller.py  binary_storage.py  bingo_engine.py  canvas_manager.py  checkerboard_manager.py  code_editor_pro.py  collision_detector.py  console_manager.py  editor_manager.py  file_manager.py  file_tree_manager.py  help_panel_manager.py  map_canvas_manager.py  map_editor_manager.py  map_lib_manager.py  map_res_lib_manager.py  map_resource_import_dialog.py  (+19 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  lib.rs  main.rs  shell.rs
(+210 files in other folders)
